# website

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
hvzsite/: config.json.example  initial_db_setup.txt  manage.py  rules_export.txt  secrets.json
hvzsite/fixtures/: badge_types.json
hvzsite/hvz/: admin.py  apps.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api_admin.py  views_api_staff.py  views_api_user.py  views_html_active_player.py  views_html_admin.py  views_html_staff.py  views_html_user.py
hvzsite/hvz/contextprocessors/: announcement_context_processor.py  banned_context_processor.py  notification_context_processor.py
hvzsite/hvz/templatetags/: hvztags.py
hvzsite/hvzsite/: asgi.py  secret.txt  settings.py  urls.py  wsgi.py
hvzsite/static/css/: announcement.css  (+5 more)
hvzsite/templates/: about.html  about_update.html  account_culling.html  admincontrolpanel.html  announcement.html  av.html  av_view.html  badge_grant.html  badge_grant_list.html  base.html  blasterapproval.html  bodyarmor.html  bodyarmors.html  clan.html  clans.html  create_av.html  create_badge.html  create_body_armor.html  create_clan.html  create_report.html  edit_announcement.html  edit_scoreboard.html  editmission.html  editmissions.html  editpostgamesurvey.html  editpostgamesurveys.html  failed_av_list.html  index.html  infection.html  login.html  manage_announcements.html  manage_scoreboards.html  missions.html  name_change.html  name_change_list.html  player.html  player_activation.html  player_oz_activation.html  players.html  print_cards.html  (+14 more)
(+15 files in other folders)
